taui/src/sass/06_components/_neighborhood-details.scss
.neighborhood-details {
  margin-bottom: 1.6rem;

  &__section {
    margin-bottom: 0.8rem;
    padding: 1.6rem;
    background-color: $white;
  }

  &__header {
    @include heading(400);
    @include font-weight(bold);
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: center;
  }

  &__star {
    flex: none;
    margin-right: 0.8rem;
    font-size: 1.8rem !important;
  }

  &__name {
    flex: auto;
    margin-right: 0.8rem;
    line-height: 1.5;
  }

  &__marker {
    flex: none;
    width: 2.4rem;
    margin-left: auto;
    fill: mix(rgba($active, 8%), rgba($primary, 8%));
    fill-opacity: 0.1;
    stroke: $active;
    stroke-width: 48;
    stroke-opacity: 0.8;
  }

  &__trip {
    @include text(300);
    @include font-weight(bold);
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: center;
  }

  &__directions {
    @include link-states() {
      color: $primary;
    }
    margin-left: auto;
  }

  .route-segments {
    @include text(200);
    margin-top: 0.6rem;
    line-height: 2.4;
  }

  &__stats {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: stretch;
    width: 100%;
  }

  &__rent {
    flex: none;
    margin-right: 0.8rem;
    padding-top: 0.4rem;
    padding-right: 1.6rem;
    text-align: center;
    border-right: 4px solid $bg-gray;
  }

  &__rent-label {
    @include text(300);
    margin-bottom: 0.8rem;
  }

  &__rent-value {
    @include text(500);
    @include font-weight(bold);
    margin-bottom: 0.8rem;
  }

  &__rent-rooms {
    @include text(300);
    @include font-weight(bold);
  }

  &__images {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: flex-start;
    margin-bottom: 0.8rem;
  }

  &__image {
    img {
      width: 110px;
      height: 83px;
    }
  }

  &__image:not(:last-of-type) {
    margin-right: 1.6rem;
  }

  &__desc {
    @include text(300);
    color: $gray-800;
  }

  &__link-heading {
    @include heading(300);
    margin-bottom: 0.8rem;

    &:not(:first-of-type) {
      margin-top: 2.4rem;
    }
  }

  &__links {
    @include text(300);
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
    align-items: center;
  }

  &__link {
    @include link-states() {
      color: $primary;
    }

    &:not(:last-child) {
      margin-right: 2.4rem;
    }
  }
}

